# gr_analytics

./: .gitignore  README.md  example_australia_2026.ipynb  prompt_for_data.md  pyproject.toml  test_case.xlsx
.github/workflows/: tests.yml
gr_analytics/: __init__.py  get_positions.py
gr_analytics/data/: driver_data.csv  race_results.csv
scripts/: update_finishing_positions.py
tests/: australia_2026_gr_results.csv  test_australia.csv  test_eight_race_average.py  test_scoring.py
