[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gr_analytics"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pandas"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gr_analytics = ["data/*.csv"]
